[package]
name = "gherkin"
version = "0.1.0"
authors = ["Michael Mitteregger <michael.mitteregger@gmx.at>"]
description = """
Gherkin parser/compiler for Rust.
Please see [Gherkin](https://github.com/cucumber/gherkin) for details.
"""
homepage = "https://github.com/cucumber/cucumber/tree/master/gherkin"
repository = "https://github.com/cucumber/cucumber/tree/master/gherkin/rust"
readme = "README.md"
keywords = ["cucumber", "bdd", "testing"]
categories = ["parser-implementations", "development-tools::testing"]
license = "MIT"

[lib]
name = "gherkin"
path = "src/lib.rs"

[[bin]]
name = "gherkin_generate_tokens"
path = "src/bin/generate_tokens.rs"

[[bin]]
name = "gherkin"
path = "src/bin/gherkin.rs"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
regex = "1"
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
