[package]
name = "gherkin"
version = "0.1.0"
authors = ["Michael Mitteregger <michael.mitteregger@gmx.at>"]
description = """
Gherkin parser/compiler for Rust.
Please see [Gherkin](https://github.com/cucumber/gherkin) for details.
"""
homepage = "https://github.com/cucumber/cucumber/tree/master/gherkin"
repository = "https://github.com/cucumber/cucumber/tree/master/gherkin/rust"
readme = "README.md"
keywords = ["cucumber", "bdd", "testing"]
categories = ["parser-implementations", "development-tools::testing"]
license = "MIT"
edition = "2018"

[lib]
name = "gherkin"
path = "src/lib.rs"

[[bin]]
name = "gherkin_generate_tokens"
path = "src/bin/generate_tokens.rs"

[[bin]]
name = "gherkin"
path = "src/bin/gherkin.rs"

[dependencies]
cucumber_messages = { path = "../../messages/rust" }
failure = "0.1"
failure_derive = "0.1"
regex = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
